# ezcommon

./: CMakeLists.txt
include/ez/: CommonTypeTraits.h  Flags.h  Span.h  StreamOperators.h  TupleForEach.h
